# lumoscribe2033

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md  pyproject.toml  requirements.txt
.cursor/commands/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.cursor/rules/: specify-rules.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  ci_enhanced.yml  release.yml  security-scan.yml
.roo/rules/: specify-rules.md
.specify/memory/: constitution.md
docs/internal/: __init__.py  ci_cd_validation_report.md  compliance_report_20251116_190131.json  compliance_report_20251116_190155.json  compliance_report_20251116_190155.md  logs.md  metrics.md
docs/reference/: adapters-guide.md  adapters-quickstart.md  architecture-quality-guide.md  best-practices.md  langchain-runner-guide.md  system-architecture.md
docs/videos/: README.md
examples/: enhanced_rag_storage_demo.py  llamaindex_rag_demo.py
graph/snapshots/: lumoscribe_graph_20251114_000000.json
scripts/: bootstrap_data_dirs.py  generate_release_notes.py  init_chroma.py  init_networkx.py  init_sqlite.py
specs/001-hybrid-rag-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py
src/api/: __init__.py  langchain_middleware.py  main.py  middleware.py  monitoring_middleware.py  security_middleware.py  versioning.py
src/cli/: __init__.py  compliance_checker.py  main.py  metrics_collector.py  performance_analyzer.py
src/domain/: __init__.py
src/framework/: __init__.py
src/tools/: performance_bottleneck_analyzer.py  performance_optimizer_executor.py
src/workers/: __init__.py  (+3 more)
tests/: __init__.py
(+106 files in other folders)
