[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumoscribe2033"
version = "0.1.0"
description = "lumoscribe2033 AI 开发平台"
authors = [{name = "lumoscribe2033 Team"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "UP", # pyupgrade
    "I",  # isort
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B904",  # use raise from
    "B905",  # zip without explicit strict
    "F401",  # imported but unused
]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "src.framework.shared.telemetry",
    "src.framework.storage.*",
    "src.framework.rag.*",
    "src.framework.orchestrators.*",
    "src.workers.*",
    "src.api.*",
    "src.cli.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]